--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 HomeworkLesson9/HomeworkLesson9.xcodeproj
 HomeworkLesson9/HomeworkLesson9.xcodeproj
+HomeworkLesson9/HomeworkLesson9.xcodeproj/project.xcworkspace
